# Quark

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Quark.sln  README.md  premake5.lua
.github/workflows/: cmake.yml
Quark/: CMakeLists.txt  Quark.vcxproj  Quark.vcxproj.filters
Quark/src/: CMakeLists.txt  Quark.hpp  qkpch.hpp
Quark/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Quark/src/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.hpp
Quark/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Quark/src/Quark/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseButtonCodes.hpp  Window.hpp  qkpch.cpp  qkpch.hpp
Quark/src/Quark/Core/: Bimap.hpp  Namespace.hpp  Timestep.hpp
Quark/src/Quark/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Quark/src/Quark/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Quark/src/Quark/Photon/: Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Datatypes.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
Quark/src/Quark/Utility/: Bimap.hpp  ShaderBinaryStructs.hpp
Sandbox/: Sandbox.vcxproj
Sandbox/src/: CMakeLists.txt  SandboxApp.cpp
Sandbox/src/shaders/: ShaderBinaries.cpp  ShaderBinaries.hpp  fragmentShader.hlsl  shader.frag  shader.vert  vertexShader.hlsl
doc/: Doxyfile  Doxyfile.in  doxygen-awesome.css  header.html
doc/html/: _application_8cpp.html  _application_8hpp.html  _application_8hpp.js  _application_8hpp_source.html  _application_event_8hpp.html  _application_event_8hpp_source.html  _bimap_8hpp.html  _bimap_8hpp_source.html  _buffer_8cpp.html  _buffer_8hpp.html  _buffer_8hpp_source.html  _context_8cpp.html  _context_8hpp.html  _context_8hpp_source.html  _core_8hpp.html  _core_8hpp.js  _core_8hpp_source.html  _datatypes_8hpp.html  _datatypes_8hpp.js  _datatypes_8hpp_source.html  _entry_point_8hpp.html  _entry_point_8hpp_source.html  _event_8hpp.html  _event_8hpp.js  _event_8hpp_source.html  _im_gui_build_8cpp.html  _im_gui_layer_8cpp.html  _im_gui_layer_8cpp.js  _im_gui_layer_8hpp.html  _im_gui_layer_8hpp_source.html  _input_8hpp.html  _input_8hpp_source.html  _key_codes_8hpp.html  _key_codes_8hpp.js  _key_codes_8hpp_source.html  _key_event_8hpp.html  _key_event_8hpp_source.html  _layer_8cpp.html  _layer_8hpp.html  _layer_8hpp_source.html  (+417 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  (+79 more)
